# alchemy-helper

./: .gitignore  CMakeLists.txt  config.json  extract_ingredients.js  save_interpreter  save_interpreter.cpp
data/: tesv_cc.json  tesv_effects.json  tesv_main.json  tesv_merged.json
src/: calculation.js  definitions.cpp  extract_effects.js  extract_potions.js  save_interpreter.cpp
